<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_switch_storage"
        android:title="@string/menu_switch_storage"
        app:showAsAction="never" />
</menu>
