<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewNoteTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/viewNoteContent"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
